shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__config_snapshot_by_rand_screen.snap
---
source: shared/src/app/instrument/config.rs
expression: configs
---
- portrait: false
  width: 1920
  height: 1080
  breadth: 360
  length: 1644
  whitespace: 108
  groups: 3
  buttons_group: 2
  button_size: 54
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 165.93439
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 2560
  height: 1440
  breadth: 480
  length: 2380
  whitespace: 60
  groups: 2
  buttons_group: 5
  button_size: 30
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 133.21661
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 1366
  height: 768
  breadth: 256
  length: 990
  whitespace: 158
  groups: 2
  buttons_group: 2
  button_size: 79
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 133.10132
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 2732
  height: 2048
  breadth: 682.6666666666666
  length: 2216
  whitespace: 228
  groups: 1
  buttons_group: 2
  button_size: 114
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 167.5174
  sample_rate_hz: 96000
  channels: 1
- portrait: false
  width: 2436
  height: 1125
  breadth: 375
  length: 1784
  whitespace: 296
  groups: 2
  buttons_group: 2
  button_size: 148
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 157.63445
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 2960
  height: 1440
  breadth: 480
  length: 2900
  whitespace: 0
  groups: 2
  buttons_group: 2
  button_size: 288
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 140.76036
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 3840
  height: 2160
  breadth: 720
  length: 2836
  whitespace: 472
  groups: 2
  buttons_group: 2
  button_size: 236
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 216.21936
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 1280
  height: 800
  breadth: 266.6666666666667
  length: 840
  whitespace: 190
  groups: 1
  buttons_group: 3
  button_size: 95
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 161.66632
  sample_rate_hz: 96000
  channels: 1
- portrait: false
  width: 3440
  height: 1440
  breadth: 480
  length: 3180
  whitespace: 100
  groups: 3
  buttons_group: 3
  button_size: 50
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 114.92094
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 2560
  height: 1600
  breadth: 533.3333333333334
  length: 2036
  whitespace: 232
  groups: 1
  buttons_group: 3
  button_size: 116
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 181.54999
  sample_rate_hz: 96000
  channels: 1
- portrait: true
  width: 1080
  height: 2340
  breadth: 360
  length: 1735
  whitespace: 280
  groups: 2
  buttons_group: 2
  button_size: 140
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 152.25151
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 6016
  height: 3384
  breadth: 1128
  length: 4836
  whitespace: 560
  groups: 1
  buttons_group: 3
  button_size: 280
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 160.33766
  sample_rate_hz: 96000
  channels: 1
- portrait: false
  width: 2048
  height: 1536
  breadth: 512
  length: 1516
  whitespace: 236
  groups: 1
  buttons_group: 2
  button_size: 118
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 111.70553
  sample_rate_hz: 96000
  channels: 1
- portrait: false
  width: 2960
  height: 1440
  breadth: 480
  length: 2900
  whitespace: 0
  groups: 2
  buttons_group: 2
  button_size: 288
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 134.94023
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 1280
  height: 720
  breadth: 240
  length: 836
  whitespace: 192
  groups: 1
  buttons_group: 3
  button_size: 96
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 207.54759
  sample_rate_hz: 96000
  channels: 1
- portrait: false
  width: 2560
  height: 1440
  breadth: 480
  length: 2036
  whitespace: 232
  groups: 1
  buttons_group: 3
  button_size: 116
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 162.16452
  sample_rate_hz: 96000
  channels: 1
- portrait: false
  width: 1280
  height: 1024
  breadth: 341.3333333333333
  length: 916
  whitespace: 152
  groups: 2
  buttons_group: 2
  button_size: 76
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 208.71033
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 3840
  height: 1080
  breadth: 360
  length: 3620
  whitespace: 80
  groups: 10
  buttons_group: 2
  button_size: 40
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 125.59783
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 2224
  height: 1668
  breadth: 556
  length: 1532
  whitespace: 316
  groups: 1
  buttons_group: 2
  button_size: 158
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 205.73105
  sample_rate_hz: 96000
  channels: 1
- portrait: false
  width: 2960
  height: 1440
  breadth: 480
  length: 2900
  whitespace: 0
  groups: 2
  buttons_group: 2
  button_size: 288
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 141.00795
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 3840
  height: 1600
  breadth: 533.3333333333334
  length: 3228
  whitespace: 276
  groups: 2
  buttons_group: 3
  button_size: 138
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 125.6121
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 1280
  height: 720
  breadth: 240
  length: 836
  whitespace: 192
  groups: 1
  buttons_group: 3
  button_size: 96
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 114.66763
  sample_rate_hz: 96000
  channels: 1
- portrait: false
  width: 1920
  height: 1200
  breadth: 400
  length: 1480
  whitespace: 190
  groups: 2
  buttons_group: 2
  button_size: 95
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 120.23089
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 2560
  height: 1440
  breadth: 480
  length: 2080
  whitespace: 210
  groups: 2
  buttons_group: 2
  button_size: 105
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 150.8244
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 1366
  height: 768
  breadth: 256
  length: 1150
  whitespace: 78
  groups: 2
  buttons_group: 2
  button_size: 39
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 119.04943
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 2560
  height: 1440
  breadth: 480
  length: 1812
  whitespace: 344
  groups: 1
  buttons_group: 3
  button_size: 172
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 133.21661
  sample_rate_hz: 96000
  channels: 1
- portrait: false
  width: 1280
  height: 800
  breadth: 266.6666666666667
  length: 996
  whitespace: 112
  groups: 2
  buttons_group: 2
  button_size: 56
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 147.08772
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 2960
  height: 1440
  breadth: 480
  length: 2900
  whitespace: 0
  groups: 2
  buttons_group: 2
  button_size: 288
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 134.94023
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 3840
  height: 2160
  breadth: 720
  length: 2836
  whitespace: 472
  groups: 2
  buttons_group: 2
  button_size: 236
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 120.944435
  sample_rate_hz: 96000
  channels: 2
- portrait: false
  width: 2560
  height: 1600
  breadth: 533.3333333333334
  length: 2036
  whitespace: 232
  groups: 1
  buttons_group: 3
  button_size: 116
  button_track_margin: 0.2
  safe_area:
    - 50
    - 20
    - 10
    - 25
  f0: 169.12836
  sample_rate_hz: 96000
  channels: 1

