shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 0.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 1920
height: 1080
breadth: 360
length: 1752
groups: 1
buttons_group: 3
button_size: 27
button_track_margin: 0.2
safe_area:
  - 104
  - 20
  - 64
  - 25
f0: 165.93439131844315

