shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 1.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2560
height: 1440
breadth: 480
length: 2356
groups: 1
buttons_group: 3
button_size: 36
button_track_margin: 0.2
safe_area:
  - 122
  - 20
  - 82
  - 25
f0: 133.21661558028964

