shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 10.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: true
width: 1080
height: 2340
breadth: 360
length: 2151
groups: 4
buttons_group: 2
button_size: 36
button_track_margin: 0.2
safe_area:
  - 50
  - 92
  - 10
  - 97
f0: 152.25150382788917

