shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 11.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 6016
height: 3384
breadth: 1128
length: 5508
whitespace: 224
groups: 1
buttons_group: 3
button_size: 112
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 160.33766
sample_rate_hz: 96000
channels: 1

