shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 12.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2048
height: 1536
breadth: 512
length: 1004
whitespace: 492
groups: 1
buttons_group: 2
button_size: 246
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 111.70553
sample_rate_hz: 96000
channels: 1

