shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 13.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2960
height: 1440
breadth: 480
length: 2900
whitespace: 0
groups: 2
buttons_group: 2
button_size: 288
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 134.94023
sample_rate_hz: 96000
channels: 2

