shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 14.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 1280
height: 720
breadth: 240
length: 1080
groups: 2
buttons_group: 2
button_size: 35
button_track_margin: 0.2
safe_area:
  - 120
  - 20
  - 80
  - 25
f0: 207.54758490524526

