shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 16.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 1280
height: 1024
breadth: 341.3333333333333
length: 1092
whitespace: 64
groups: 2
buttons_group: 2
button_size: 32
button_track_margin: 0.2
safe_area:
  - 50
  - 20
  - 10
  - 25
f0: 208.71033
sample_rate_hz: 96000
channels: 2

