shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 17.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 3840
height: 1080
breadth: 360
length: 3740
groups: 3
buttons_group: 3
button_size: 10
button_track_margin: 0.2
safe_area:
  - 70
  - 20
  - 30
  - 25
f0: 125.59782965805904

