shared/src/app/instrument/snapshots/shared__app__instrument__config__tests__size: 18.snap
---
source: shared/src/app/instrument/config.rs
expression: config
---
portrait: false
width: 2224
height: 1668
breadth: 556
length: 1652
groups: 1
buttons_group: 3
button_size: 128
button_track_margin: 0.2
safe_area:
  - 306
  - 20
  - 266
  - 25
f0: 205.73104449150057

